# sat4gpu

./: .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: build.yml  clang-format.yml
app/: sat.cpp
include/: backend.hpp  clause.hpp  io.hpp  lit.hpp  solution.hpp  solver.hpp  var.hpp
resource/: dataset_urls.txt  test_10.cnf  test_5.cnf  test_6.cnf  test_7.cnf  test_8.cnf  test_9.cnf
src/: clause.cpp  cpu_comb_backend.cpp  cpu_comb_backend.hpp  cpu_matsat_backend.cpp  cpu_matsat_backend.hpp  cpu_matsat_funcs.cpp  cpu_matsat_funcs.hpp  cpu_naive_comb_backend.cpp  cpu_naive_comb_backend.hpp  cpu_structs.cpp  cpu_structs.hpp  cuda_backend.cu  cuda_backend.cuh  io.cpp  lit.cpp  math.hpp  solver.cpp
test/: CMakeLists.txt  common.hpp  test_api.cpp  test_io.cpp  test_matsat.cpp  test_naive.cpp  test_solve.cpp
